[gd_scene load_steps=19 format=3 uid="uid://crwj6wjnr1s71"]

[ext_resource type="Script" path="res://Ui/encore.gd" id="1_7y1dw"]
[ext_resource type="Texture2D" uid="uid://om80wevgv78j" path="res://Ui/side.png" id="1_mdfjb"]
[ext_resource type="Material" uid="uid://cwon70ua4x6gk" path="res://Ui/ui_winner_mat.tres" id="2_gm1qc"]
[ext_resource type="FontFile" uid="uid://cy5qefxjl2xa1" path="res://Font/darkforest.ttf" id="3_tcwk8"]
[ext_resource type="AudioStream" uid="uid://xdykymgqtxae" path="res://Audio/sfx/explosion_with_synth.wav" id="5_whpkw"]

[sub_resource type="Animation" id="Animation_50374"]
resource_name = "Appear"
length = 2.0
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root_Cont/01/Panel_01:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.633333, 0.733333, 0.833333, 0.9, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1096, 0), Vector2(-181.835, 0), Vector2(-181.835, 0), Vector2(-181.835, -60), Vector2(-181.835, 0), Vector2(-181.835, -20), Vector2(-181.835, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Root_Cont/02/Panel_02:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667, 0.3, 0.7, 0.8, 0.9, 0.966667, 1.03333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1096, 0), Vector2(-181.835, 0), Vector2(-181.835, 0), Vector2(-181.835, -60), Vector2(-181.835, 0), Vector2(-181.835, -20), Vector2(-181.835, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Root_Cont/05/Panel_05:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.266667, 0.5, 0.9, 1, 1.1, 1.16667, 1.23333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1096, 0), Vector2(-181.835, 0), Vector2(-181.835, 0), Vector2(-181.835, -60), Vector2(-181.835, 0), Vector2(-181.835, -20), Vector2(-181.835, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Root_Cont/04/Panel_04:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.433333, 0.833333, 0.933333, 1.03333, 1.1, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1096, 0), Vector2(-181.835, 0), Vector2(-181.835, 0), Vector2(-181.835, -60), Vector2(-181.835, 0), Vector2(-181.835, -20), Vector2(-181.835, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Root_Cont/03/Panel_03:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.133333, 0.366667, 0.766667, 0.866667, 0.966667, 1.03333, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1096, 0), Vector2(-181.835, 0), Vector2(-181.835, 0), Vector2(-181.835, -60), Vector2(-181.835, 0), Vector2(-181.835, -20), Vector2(-181.835, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("WIN_TITLE:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.433333, 0.633333, 0.7, 0.766667, 0.8, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(312, 775), Vector2(312, 300), Vector2(312, 348), Vector2(312, 300), Vector2(312, 333), Vector2(312, 300)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("WIN_COLOR:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.433333, 0.633333, 0.7, 0.766667, 0.8, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(312, -202), Vector2(312, 141), Vector2(312, 91), Vector2(312, 141), Vector2(312, 119), Vector2(312, 141)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("WIN_TITLE:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.433333, 0.566667, 0.633333, 0.7, 0.766667, 0.8, 0.833333, 0.866667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.6, 1.4), Vector2(0.6, 1.4), Vector2(1.4, 0.8), Vector2(1, 1), Vector2(1.2, 0.8), Vector2(1, 1), Vector2(1.1, 0.9), Vector2(1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("WIN_COLOR:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.433333, 0.566667, 0.633333, 0.7, 0.766667, 0.8, 0.833333, 0.866667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.6, 1.4), Vector2(0.6, 1.4), Vector2(1.4, 0.8), Vector2(1, 1), Vector2(1.2, 0.8), Vector2(1, 1), Vector2(1.1, 0.9), Vector2(1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("GPUParticles2D:emitting")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_dfr04"]
resource_name = "Disappear"
length = 2.0
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root_Cont/01/Panel_01:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-181.835, 0), Vector2(-1600, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Root_Cont/02/Panel_02:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-181.835, 0), Vector2(-1600, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Root_Cont/05/Panel_05:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.266667, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-181.835, 0), Vector2(-1600, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Root_Cont/04/Panel_04:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.433333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-181.835, 0), Vector2(-1600, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Root_Cont/03/Panel_03:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.133333, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-181.835, 0), Vector2(-1600, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("WIN_TITLE:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(312, 300), Vector2(312, 295), Vector2(312, 775)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("WIN_COLOR:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.0333333, 0.0666667, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(312, 141), Vector2(312, 147), Vector2(312, -202)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("WIN_TITLE:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 0.8), Vector2(0.6, 1.4)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("WIN_COLOR:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.0333333, 0.0666667, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 0.8), Vector2(0.6, 1.4)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("GPUParticles2D:emitting")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_2hno0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root_Cont/01/Panel_01:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1096, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WIN_TITLE:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(312, 775)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WIN_COLOR:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(312, -202)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WIN_TITLE:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Root_Cont/02/Panel_02:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-181.835, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Root_Cont/03/Panel_03:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-181.835, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Root_Cont/04/Panel_04:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-181.835, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Root_Cont/05/Panel_05:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-181.835, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("GPUParticles2D:emitting")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bi68e"]
_data = {
"Appear": SubResource("Animation_50374"),
"Disappear": SubResource("Animation_dfr04"),
"RESET": SubResource("Animation_2hno0")
}

[sub_resource type="Gradient" id="Gradient_hjw4m"]
offsets = PackedFloat32Array(0.00621118, 1)
colors = PackedColorArray(1, 1, 1, 0.431373, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_cbny1"]
gradient = SubResource("Gradient_hjw4m")

[sub_resource type="Curve" id="Curve_6qdy8"]
max_value = 100.0
_data = [Vector2(0.18, 0), 0.0, 0.0, 0, 0, Vector2(1, 100), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_2yhar"]
max_value = 3.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_nkk6u"]
max_value = 3.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_vec1x"]
curve_x = SubResource("Curve_6qdy8")
curve_y = SubResource("Curve_2yhar")
curve_z = SubResource("Curve_nkk6u")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sbnxl"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(150, 360, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(-1, 0, 0)
spread = 0.0
initial_velocity_min = 5000.0
initial_velocity_max = 10000.0
gravity = Vector3(0, 0, 0)
scale_min = 3.0
scale_max = 8.0
scale_over_velocity_max = 10000.0
scale_over_velocity_curve = SubResource("CurveXYZTexture_vec1x")
color_initial_ramp = SubResource("GradientTexture1D_cbny1")

[sub_resource type="LabelSettings" id="LabelSettings_1c4g1"]
font = ExtResource("3_tcwk8")
font_size = 160
font_color = Color(1, 1, 0, 1)
outline_color = Color(0.054902, 0.184314, 0.301961, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.352941)
shadow_offset = Vector2(1, 10)

[sub_resource type="LabelSettings" id="LabelSettings_vhw78"]
font = ExtResource("3_tcwk8")
font_size = 320
outline_color = Color(0.054902, 0.184314, 0.301961, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.352941)
shadow_offset = Vector2(1, 10)

[node name="Encore" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7y1dw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bi68e")
}

[node name="Root_Cont" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 136

[node name="01" type="Control" parent="Root_Cont"]
layout_mode = 2

[node name="Panel_01" type="NinePatchRect" parent="Root_Cont/01"]
self_modulate = Color(1, 1, 1, 0.980392)
layout_mode = 1
offset_left = 1096.0
offset_right = 3465.0
offset_bottom = 176.0
texture = ExtResource("1_mdfjb")
axis_stretch_horizontal = 2
axis_stretch_vertical = 1

[node name="Winner_Color_01" type="NinePatchRect" parent="Root_Cont/01/Panel_01" groups=["panel_color"]]
modulate = Color(1, 1, 0, 1)
show_behind_parent = true
material = ExtResource("2_gm1qc")
layout_mode = 1
offset_right = 2369.0
offset_bottom = 176.0
texture = ExtResource("1_mdfjb")
axis_stretch_horizontal = 2
axis_stretch_vertical = 1

[node name="02" type="Control" parent="Root_Cont"]
layout_mode = 2

[node name="Panel_02" type="NinePatchRect" parent="Root_Cont/02"]
self_modulate = Color(1, 1, 1, 0.784314)
layout_mode = 1
offset_left = -181.835
offset_right = 2187.17
offset_bottom = 176.0
texture = ExtResource("1_mdfjb")
axis_stretch_horizontal = 2
axis_stretch_vertical = 1

[node name="Winner_Color_02" type="NinePatchRect" parent="Root_Cont/02/Panel_02" groups=["panel_color"]]
modulate = Color(1, 1, 0, 1)
show_behind_parent = true
layout_mode = 1
offset_right = 2369.0
offset_bottom = 176.0
texture = ExtResource("1_mdfjb")
axis_stretch_horizontal = 2
axis_stretch_vertical = 1

[node name="03" type="Control" parent="Root_Cont"]
layout_mode = 2

[node name="Panel_03" type="NinePatchRect" parent="Root_Cont/03"]
self_modulate = Color(1, 1, 1, 0.588235)
layout_mode = 1
offset_left = -181.835
offset_right = 2187.17
offset_bottom = 176.0
texture = ExtResource("1_mdfjb")
axis_stretch_horizontal = 2
axis_stretch_vertical = 1

[node name="Winner_Color_03" type="NinePatchRect" parent="Root_Cont/03/Panel_03" groups=["panel_color"]]
modulate = Color(1, 1, 0, 1)
show_behind_parent = true
layout_mode = 1
offset_right = 2369.0
offset_bottom = 176.0
texture = ExtResource("1_mdfjb")
axis_stretch_horizontal = 2
axis_stretch_vertical = 1

[node name="04" type="Control" parent="Root_Cont"]
layout_mode = 2

[node name="Panel_04" type="NinePatchRect" parent="Root_Cont/04"]
self_modulate = Color(1, 1, 1, 0.392157)
layout_mode = 1
offset_left = -181.835
offset_right = 2187.17
offset_bottom = 176.0
texture = ExtResource("1_mdfjb")
axis_stretch_horizontal = 2
axis_stretch_vertical = 1

[node name="Winner_Color_04" type="NinePatchRect" parent="Root_Cont/04/Panel_04" groups=["panel_color"]]
modulate = Color(1, 1, 0, 1)
show_behind_parent = true
layout_mode = 1
offset_right = 2369.0
offset_bottom = 176.0
texture = ExtResource("1_mdfjb")
axis_stretch_horizontal = 2
axis_stretch_vertical = 1

[node name="05" type="Control" parent="Root_Cont"]
layout_mode = 2

[node name="Panel_05" type="NinePatchRect" parent="Root_Cont/05"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
offset_left = -181.835
offset_right = 2187.17
offset_bottom = 176.0
texture = ExtResource("1_mdfjb")
axis_stretch_horizontal = 2
axis_stretch_vertical = 1

[node name="Winner_Color_05" type="NinePatchRect" parent="Root_Cont/05/Panel_05" groups=["panel_color"]]
modulate = Color(1, 1, 0, 1)
show_behind_parent = true
layout_mode = 1
offset_right = 2369.0
offset_bottom = 241.0
texture = ExtResource("1_mdfjb")
axis_stretch_horizontal = 2
axis_stretch_vertical = 1

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
z_as_relative = false
position = Vector2(1506, 360)
emitting = false
amount = 150
process_material = SubResource("ParticleProcessMaterial_sbnxl")
lifetime = 1.5
visibility_rect = Rect2(-500, -500, 500, 500)

[node name="WIN_COLOR" type="Label" parent="."]
layout_mode = 0
offset_left = 312.0
offset_top = -202.0
offset_right = 781.0
offset_bottom = -42.0
scale = Vector2(0.6, 1.4)
pivot_offset = Vector2(230, 100)
text = "YELLOW"
label_settings = SubResource("LabelSettings_1c4g1")
horizontal_alignment = 1

[node name="WIN_TITLE" type="Label" parent="."]
layout_mode = 0
offset_left = 312.0
offset_top = 775.0
offset_right = 781.0
offset_bottom = 1095.0
pivot_offset = Vector2(235, 100)
text = "WIN
"
label_settings = SubResource("LabelSettings_vhw78")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_whpkw")
autoplay = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
